--- a/style.css
+++ b/style.css
@@ -371,7 +371,7 @@ footer {
 
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-        gap: 2rem;
+        gap: clamp(2rem, 6vw, 5rem);
 
         background-color: var(--secondary);
         
@@ -411,6 +411,7 @@ footer {
 
         .right {
             gap: 1rem;
+            justify-content: center;
 
             .link {
                 font-weight: var(--weight-md);
